Form mostly complete. Some alignment issues remain.

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -1,5 +1,81 @@
 /*
 Author: Justin Nichols
 Class: CSC337 (Web Development)
-Purpose:
+Purpose: This page stylizes the index.html page.
+         The form inputs and labels are not aligned well, so 
+             that is a work-in-progress.
 */
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-image: url("../img/background.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+header {
+    padding: 25px 0;
+    height: 60px;
+    width: 100%;
+}
+
+h1, h2, label {
+    color: white;
+    font-family: "Trebuchet MS";
+}
+
+h1, h2 {
+    text-align: center;
+}
+
+h1 {
+    font-size: 80px;
+}
+
+h2 {
+    font-size: 40px;
+}
+
+input {
+    background-color: silver;
+    color: darkgoldenrod;
+    font-family: "Trebuchet MS";
+}
+
+img {
+    margin: 15px auto;
+    display: block;
+}
+
+form {
+    background-color: black;
+    margin: 15px auto;
+    padding: 15px;
+    width: 75%;
+}
+
+form > div, input {
+    padding: 8px 15px;
+}
+
+label {
+    display: inline-block;
+    width: 250px;
+    text-align: right;
+}
+
+.radio {
+    text-align: left;
+}
+
+#content {
+    padding: 15px 50px;
+    height: 100%;
+    width: 100%;
+}
+
